--- a/html/style.scss
+++ b/html/style.scss
@@ -1,3 +1,5 @@
+@use "@material/button/styles";
+
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   -webkit-font-smoothing: antialiased;
