--- a/html/style.scss
+++ b/html/style.scss
@@ -1,4 +1,5 @@
 @use "@material/button/styles";
+@import 'material-icons/iconfont/material-icons.css';
 
 #app {
   font-family: Avenir, Helvetica, Arial, sans-serif;
