.icon class on icon element

--- a/views/material/button.pug
+++ b/views/material/button.pug
@@ -1,5 +1,5 @@
 mixin mdc-button-icon(icon)
-    i(aria-hidden=true).material-icons.mdc-button__icon= icon
+    i(aria-hidden=true).material-icons.mdc-button__icon.icon= icon
 
 mixin mdc-button(label, icon)
     -
