--- a/views/app.pug
+++ b/views/app.pug
@@ -7,21 +7,31 @@ include material/button
         get me.querySelector('.label')
         put 'Clicked: ' + :count into it
     `
+
 p Text Button
 +textButton(label)(_=_)
 | 
 +textButton(label, icon)(_=_)
 | 
 +textButton(label, { icon: icon, trailing: true })(_=_)
+
 p Outlined Button
 +outlinedButton(label)(_=_)
 | 
 +outlinedButton(label, icon)(_=_)
 | 
 +outlinedButton(label, { icon: icon, trailing: true })(_=_)
+
 p Raised Button
 +raisedButton(label)(_=_)
 | 
 +raisedButton(label, icon)(_=_)
 | 
 +raisedButton(label, { icon: icon, trailing: true })(_=_)
+
+p Unelevated Button
++unelevatedButton(label)(_=_)
+| 
++unelevatedButton(label, icon)(_=_)
+| 
++unelevatedButton(label, { icon: icon, trailing: true })(_=_)
