wip update password

--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -6,6 +6,4 @@ form(
     hx-target='#app'
 )
     p: +filledTextField('email', 'email', 'email')
-    p: +filledTextField('password', 'password', 'password')
-    p: +filledTextField('password2', 'confirm password', 'password')
-    p: +outlinedButton('send')
+    p: +raisedButton('sing up')
