--- a/views/users/password.pug
+++ b/views/users/password.pug
@@ -5,7 +5,9 @@ form(
     hx-post='/users/password'
     hx-target='#app'
 )
-    p: +filledTextField('email', 'email', 'email')
+    p
+        +filledTextField('email', 'email', 'email', email)(disabled)
+        input(type='hidden', name='token' value=token)
     p: +filledTextField('password', 'password', 'password')
     p: +filledTextField('password2', 'confirm password', 'password')
-    p: +outlinedButton('sign up')
+    p: +raisedButton('save')
