--- a/views/users/register.pug
+++ b/views/users/register.pug
@@ -6,4 +6,4 @@ form(
     hx-target='#app'
 )
     p: +filledTextField('email', 'email', 'email')
-    p: +raisedButton('sing up')
+    p: +raisedButton('sign up')
