--- a/views/users/password/index.pug
+++ b/views/users/password/index.pug
@@ -1,5 +1,5 @@
-include ../material/textField
-include ../material/button
+include ../../material/textField
+include ../../material/button
 
 form(
     hx-post='/users/password'
