--- a/views/users/signIn.pug
+++ b/views/users/signIn.pug
@@ -1,5 +1,5 @@
-include /material/textField
-include /material/button
+include /fastify-htmx/material/textField
+include /fastify-htmx/material/button
 
 form(
     hx-post='/users/signin'
