--- a/views/secret.pug
+++ b/views/secret.pug
@@ -1,1 +1,13 @@
-| Secret
+include /pug-material-design/button
+
+#container
+    | This is the secret content.
+    | 
+    +outlinedButton('hide')(
+        _=`
+            init send showSecret to #model
+            on click remove the closest #container
+            then send hideSecret to #model
+        `
+        hx-get='/push/'
+    )
