--- a/views/users/signUp.pug
+++ b/views/users/signUp.pug
@@ -3,7 +3,7 @@ include /pug-material-design/button
 
 form(
     hx-post='/users'
-    hx-target='#app'
+    hx-target='main'
 )
     p: +filledTextField('email', 'email', 'email')
     p: +raisedButton('sign up')
