--- a/views/secret.pug
+++ b/views/secret.pug
@@ -1,6 +1,7 @@
 include /pug-material-design/button
 
 #container
+    p= url
     | This is the secret content.
     | 
     +outlinedButton('hide')(
