--- a/views/secret.pug
+++ b/views/secret.pug
@@ -10,4 +10,5 @@ include /pug-material-design/button
             then send hideSecret to #model
         `
         hx-get='/push/'
+        hx-swap='none'
     )
