--- a/views/users/password/index.pug
+++ b/views/users/password/index.pug
@@ -2,11 +2,11 @@ include /pug-material-design/textField
 include /pug-material-design/button
 
 form(
-    hx-post='/users/password'
+    method='POST'
+    action='/users/password'
 )
-    p
-        +filledTextField('email', 'email', 'email', email)(disabled)
-        input(type='hidden', name='token' value=token)
+    input(type='hidden', name='token' value=token)
+    p: +filledTextField('email', 'email', 'email', email)(disabled)
     p: +filledTextField('password', 'password', 'password')
     p: +filledTextField('password2', 'confirm password', 'password')
-    p: +raisedButton('save')
+    p: +raisedButton('save')(type='submit')
