--- a/views/users/password/change.pug
+++ b/views/users/password/change.pug
@@ -7,4 +7,4 @@ form(
     hx-target='main'
 )
     p: +filledTextField('email', 'email', 'email')
-    p: +raisedButton('send')(type='submit')
+    p: +raisedButton('send')()
