--- a/views/users/password/index.pug
+++ b/views/users/password/index.pug
@@ -9,4 +9,4 @@ form(
     p: +filledTextField('email', 'email', 'email', email)(disabled)
     p: +filledTextField('password', 'password', 'password')
     p: +filledTextField('password2', 'confirm password', 'password')
-    p: +raisedButton('save')(type='submit')
+    p: +raisedButton('save')()
