--- a/views/users/signup.pug
+++ b/views/users/signup.pug
@@ -7,4 +7,4 @@ form(
     hx-target='main'
 )
     p: +filledTextField('email', 'email', 'email')
-    p: +raisedButton('sign up')(type='submit')
+    p: +raisedButton('sign up')
