--- a/views/secret.pug
+++ b/views/secret.pug
@@ -1,14 +1,16 @@
-include /pug-material-design/button
+extends /../views/app
+block app
+    include /pug-material-design/button
 
-#container
-    | This is the secret content.
-    | 
-    +outlinedButton('hide')(
-        _=`
-            init send showSecret to #model
-            on click remove the closest #container
-            then send hideSecret to #model
-        `
-        hx-get='/push/'
-        hx-swap='none'
-    )
+    #container
+        | This is the secret content.
+        | 
+        +outlinedButton('hide')(
+            _=`
+                init send showSecret to #model
+                on click remove the closest #container
+                then send hideSecret to #model
+            `
+            hx-get='/push/'
+            hx-swap='none'
+        )
