--- a/views/users/password/index.pug
+++ b/views/users/password/index.pug
@@ -1,12 +1,14 @@
-include /pug-material-design/textField
-include /pug-material-design/button
+extends /../views/app
+block app
+    include /pug-material-design/textField
+    include /pug-material-design/button
 
-form(
-    method='POST'
-    action='/users/password'
-)
-    input(type='hidden', name='token' value=token)
-    p: +filledTextField('email', 'email', 'email', email)(disabled)
-    p: +filledTextField('password', 'password', 'password')
-    p: +filledTextField('password2', 'confirm password', 'password')
-    p: +raisedButton('save')()
+    form(
+        method='POST'
+        action='/users/password'
+    )
+        input(type='hidden', name='token' value=token)
+        p: +filledTextField('email', 'email', 'email', email)(disabled)
+        p: +filledTextField('password', 'password', 'password')
+        p: +filledTextField('password2', 'confirm password', 'password')
+        p: +raisedButton('save')()
