--- a/views/users/password/change.pug
+++ b/views/users/password/change.pug
@@ -1,10 +1,12 @@
-include /pug-material-design/textField
-include /pug-material-design/button
+extends /../views/app
+block app
+    include /pug-material-design/textField
+    include /pug-material-design/button
 
-form(
-    method='POST'
-    action='/users/password/change'
-    hx-target='main'
-)
-    p: +filledTextField('email', 'email', 'email')
-    p: +raisedButton('send')()
+    form(
+        method='POST'
+        action='/users/password/change'
+        hx-target='main'
+    )
+        p: +filledTextField('email', 'email', 'email')
+        p: +raisedButton('send')()
