--- a/views/users/password/index.pug
+++ b/views/users/password/index.pug
@@ -7,7 +7,8 @@ block app
         method='POST'
         action='/users/password'
     )
-        input(type='hidden', name='token' value=token)
+        input(type='hidden' name='_method' value='PUT')
+        input(type='hidden' name='token' value=token)
         p: +filledTextField('email', 'email', 'email', email)(disabled)
         p: +filledTextField('password', 'password', 'password')
         p: +filledTextField('password2', 'confirm password', 'password')
