--- a/views/users/session.pug
+++ b/views/users/session.pug
@@ -5,7 +5,7 @@ block app
 
     form(
         method='POST'
-        action='/users/signin'
+        action='/users/session'
     )
         p: +filledTextField('email', 'email', 'email')
         p: +filledTextField('password', 'password', 'password')
