--- a/views/app.pug
+++ b/views/app.pug
@@ -57,7 +57,7 @@ else
         aside
         header
         main
-            //- this block is what gets replaced by the templates of extending
+            //- this block is what gets replaced by the extending templates of
             //- specific URLs
             block app
                 if request.auth
