some better names

--- a/views/app.pug
+++ b/views/app.pug
@@ -43,7 +43,7 @@ else
                     +textButton('logout')
             else
                 form(
-                    action='/users/create'
+                    action='/users/post'
                     hx-target='main'
                     hx-push-url='true'
                 ): +textButton('register')
